--- a/AspNetWebApiRest/Web.config
+++ b/AspNetWebApiRest/Web.config
@@ -7,8 +7,8 @@
 <configuration>
   <appSettings>
     <!-- Replace these values found in Security | API | Authorization Servers -->
-    <add key="oktaAuthority" value="https://twu.oktapreview.com/oauth2/austphpseh9LyzCT20h7"/>
-    <add key="oktaAudience" value="api://ikonpass" />
+    <add key="oktaAuthority" value="https://twu.oktapreview.com/oauth2/default"/>
+    <add key="oktaAudience" value="api://default" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
